[package]
name = "oxide-parser"
version = "1.0.14"
edition = "2021"
authors = ["WindPress <hi@wind.press>"]
description = "Tailwind CSS Oxide parser WASM for Vite and CDN usage"
license = "MIT"
repository = "https://github.com/wind-press/oxide-parser"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tailwindcss-oxide = { git = "https://github.com/tailwindlabs/tailwindcss.git", version = "0.1.0" }
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
